--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NewsDaddy is a news app which can be use to grap the latest news bites. If you are intersested in news, whether, politics and sports news, NewsDaddy is all about latest news."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NewsDaddy - Get latest news.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
